fixing the last block
fixing the last block which has download links,
Before the box is not covering all the contents inside it.

--- a/style.css
+++ b/style.css
@@ -807,7 +807,7 @@ input:checked + .slider:before {
   }
   .download {
     text-align: center;
-    height: 40vh;
+    height: 50vh;
   }
 
   .resources li {
